Style issue fixed hover

--- a/client/src/app/work/family-fund/page.mdx
+++ b/client/src/app/work/family-fund/page.mdx
@@ -4,13 +4,9 @@ import imageDebraFiscal from './debra-fiscal.jpg'
 
 export const caseStudy = {
   client: 'FamilyFund',
-  title: 'Skip the bank, borrow from those you trust',
-  description:
-    'FamilyFund is a crowdfunding platform for friends and family. Allowing users to take personal loans from their network without a traditional financial institution.',
-  summary: [
-    'FamilyFund is a crowdfunding platform for friends and family. Allowing users to take personal loans from their network without a traditional financial institution.',
-    'We developed a custom CMS to power their blog with and optimised their site to rank higher for the keywords “Gary Vee” and “Tony Robbins”.',
-  ],
+  title: 'Step One',
+  description: 'Click on the "Get Started".',
+
   logo,
   image: { src: imageHero },
   date: '2023-01',
