--- a/client/src/app/work/phobia/page.mdx
+++ b/client/src/app/work/phobia/page.mdx
@@ -4,13 +4,9 @@ import imageJennyWilson from './jenny-wilson.jpg'
 
 export const caseStudy = {
   client: 'Phobia',
-  title: 'Overcome your fears, find your match',
+  title: 'Step Three',
   description:
-    'Find love in the face of fear — Phobia is a dating app that matches users based on their mutual phobias so they can be scared together.',
-  summary: [
-    'Find love in the face of fear — Phobia is a dating app that matches users based on their mutual phobias so they can be scared together.',
-    'We worked with Phobia to develop a new onboarding flow. A user is shown pictures of common phobias and we use the microphone to detect which ones make them scream, feeding the results into the matching algorithm.',
-  ],
+    'Wait for the data to populate and download your custom workout & nutrition plan!',
   logo,
   image: { src: imageHero },
   date: '2022-06',
