--- a/client/src/app/work/unseal/page.mdx
+++ b/client/src/app/work/unseal/page.mdx
@@ -4,13 +4,8 @@ import imageEmilySelman from './emily-selman.jpg'
 
 export const caseStudy = {
   client: 'Unseal',
-  title: 'Get a hodl of your health',
-  description:
-    'Unseal is the first NFT platform where users can mint and trade NFTs of their own personal health records, allowing them to take control of their data.',
-  summary: [
-    'Unseal is the first NFT platform where users can mint and trade NFTs of their own personal health records, allowing them to take control of their data.',
-    'We built out the blockchain infrastructure that supports Unseal. Unfortunately, we took a massive loss on this project when Unseal’s cryptocurrency, PlaceboCoin, went to zero.',
-  ],
+  title: 'Step Two',
+  description: 'Fill out all the data on the form and click submit.',
   logo,
   image: { src: imageHero },
   date: '2022-10',
