--- a/client/src/app/blog/3-lessons-we-learned-going-back-to-the-office/page.mdx
+++ b/client/src/app/blog/3-lessons-we-learned-going-back-to-the-office/page.mdx
@@ -1,4 +1,4 @@
-import imageMe from '@/images/team/Me.jpg'
+import imageMe from '@/images/team/me.jpg'
 
 export const article = {
   date: '2024-04-01',
